--- a/android/build.gradle
+++ b/android/build.gradle
@@ -74,6 +74,7 @@ dependencies {
   //noinspection GradleDynamicVersion
   implementation "com.facebook.react:react-native:+"
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+  implementation "com.github.datalogic:datalogic-android-sdk:1.33"
 }
 
 if (isNewArchitectureEnabled()) {
